c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/assign.c
int main(void) {
    int var0;
    var0 = 2;
    return var0;
}