c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_semantics/extra_credit/undeclared_bitwise_op.c
int main(void){
    return a >> 2;
}